--- a/src/iBlogs.Site.Web/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Article/Index.cshtml
@@ -49,24 +49,27 @@
         <div id="comments" class="clearfix">
             @if (article.AllowComment)
             {
-                <span class="response">
-                    #if(null!=login_user) Hi，<a href="${login_user.homeUrl}" data-no-instant>$login_user.username}</a>
-                    如果你想 <a href="/logout" title="注销" data-no-instant>注销</a> ? #end
-                </span>
+
+
+                @if (Model.User!=null)
+                {
+                    <span class="response">
+                        Hi，<a href="@Model.User.HomeUrl" data-no-instant>@Model.User.ScreenName</a>
+                        如果你想 <a href="/admin/login" title="注销" data-no-instant>注销</a> ?
+                    </span>
+                }
+
 
                 <form method="post" id="comment-form" class="comment-form" onsubmit="return TaleComment.subComment();">
                     <input type="hidden" name="coid" id="coid" />
-                    <input type="hidden" name="cid" id="cid" value="${article.cid}" />
-                    <input type="hidden" name="csrf_token" value="${csrf_token}" />
+                    <input type="hidden" name="cid" id="cid" value="@Model.Content.Id" />
                     <input name="author" maxlength="12" id="author" class="form-control input-control clearfix"
-                           placeholder="姓名 (*)" value="${login_user.username ?! ''}" required />
+                           placeholder="姓名 (*)" value="@Model.User?.ScreenName" required />
                     <input type="email" name="mail" id="mail" class="form-control input-control clearfix" placeholder="邮箱 (*)"
-                           value="${login_user.email ?! ''}" required />
+                           value="@Model.User?.Email" required />
                     <input type="url" name="url" id="url" class="form-control input-control clearfix" placeholder="网址 (http://)"
-                           value="${login_user.homeUrl ?! ''}" />
-                    <textarea name="content" id="textarea" class="form-control" placeholder="基佬，留下你的评论." required minlength="5" maxlength="2000"></textarea>
-
-                    ${_csrf_token_input}
+                           value="@Model.User?.HomeUrl" />
+                    <textarea name="content" id="textarea" class="form-control" placeholder="客官,留下你的评论." required minlength="5" maxlength="2000"></textarea>
 
                     <button class="submit" id="misubmit">提交</button>
                 </form>
@@ -142,7 +145,7 @@
                     }
                 </ol>
             }
-            
+
             @if (comments != null)
             {
                 <div class="lists-navigator clearfix">
@@ -184,7 +187,7 @@
             subComment: function () {
                 $.ajax({
                     type: 'post',
-                    url: '/comment',
+                    url: '/article/comment',
                     data: $('#comment-form').serialize(),
                     async: false,
                     dataType: 'json',
