--- a/src/iBlogs.Site.Web/wwwroot/css/topstory-routes.css
+++ b/src/iBlogs.Site.Web/wwwroot/css/topstory-routes.css
@@ -61,6 +61,17 @@ html[data-theme=dark] .TopstoryTabs {
     margin: 0 22px
 }
 
+.TagsHeader {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 16px;
+    margin: 0 22px
+}
+
 .TopstoryTabs-link:hover,
 html[data-theme=dark] .TopstoryTabs-link:hover {
     color: #175199
