update tag display

--- a/src/iBlogs.Site.Web/Views/Index/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Index.cshtml
@@ -13,7 +13,18 @@
                         }
                         else
                         {
-                            <span class="TagsHeader"> #@Model.DisplayType / @Model.DisplayMeta </span>
+                            <span class="TagsHeader">
+                                <svg class="Zi Zi--Live"
+                                     fill="currentColor" viewBox="0 0 24 24" width="24"
+                                     height="24" style="color: rgb(255, 207, 0);">
+                                    <path d="M13.693 10.354l1.634-7.542c.195-.901-.16-1.083-.798-.39l-9.18 9.97c-.638.693-.377 1.254.582 1.254h5.376l-1.634 7.542c-.195.901.16 1.083.798.39l9.18-9.97c.638-.693.377-1.254-.582-1.254h-5.376z">
+                                    </path>
+                                </svg>
+                                @Model.DisplayType
+                            </span>
+                            <span class="TagsHeader">
+                                # @Model.DisplayMeta #
+                            </span>
                         }
                     </nav>
                 </div>
