--- a/src/iBlogs.Site.Web/Views/Shared/SideBar.cshtml
+++ b/src/iBlogs.Site.Web/Views/Shared/SideBar.cshtml
@@ -33,7 +33,7 @@
             <div class="Card">
                 <ul class="GlobalSideBar-categoryList">
                     <li class="GlobalSideBar-categoryItem">
-                        <a href="https://www.Blogs.com/pub/" target="_blank" title="书店" data-za-not-track-link="true" type="button" class="Button Button--plain" style="color: rgb(67, 212, 128);">
+                        <a href="https://www.Blogs.com/pub/" target="_blank" title="分类" data-za-not-track-link="true" type="button" class="Button Button--plain" style="color: rgb(67, 212, 128);">
                             <span class="GlobalSideBar-categoryIcon">
                                 <svg class="Zi Zi--Ebook"
                                      fill="currentColor" viewBox="0 0 24 24" width="24"
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="GlobalSideBar-categoryItem">
-                        <a href="https://www.Blogs.com/roundtable" target="_blank" title="圆桌" data-za-not-track-link="true" type="button" class="Button Button--plain" style="color: rgb(0, 132, 255);">
+                        <a href="/alltags" title="标签" data-za-not-track-link="true" type="button" class="Button Button--plain" style="color: rgb(0, 132, 255);">
                             <span class="GlobalSideBar-categoryIcon">
                                 <svg class="Zi Zi--Org"
                                      fill="currentColor" viewBox="0 0 24 24" width="24"
@@ -131,6 +131,7 @@
                         </a>
                     </li>
                 </ul>
+                
             </div>
         </div>
     </div>
