--- a/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
@@ -10,8 +10,8 @@
                         <span class="TagsHeader">
                             <svg class="Zi Zi--Live"
                                  fill="currentColor" viewBox="0 0 24 24" width="24"
-                                 height="24" style="color: rgb(255, 207, 0);">
-                                <path d="M13.693 10.354l1.634-7.542c.195-.901-.16-1.083-.798-.39l-9.18 9.97c-.638.693-.377 1.254.582 1.254h5.376l-1.634 7.542c-.195.901.16 1.083.798.39l9.18-9.97c.638-.693.377-1.254-.582-1.254h-5.376z">
+                                 height="24" style="color: rgb(0, 132, 255);">
+                                <path d="M10.786 8.41a8.938 8.938 0 0 0-3.968-2.528c-.305-1.719.814-3.337 2.442-3.741 1.221-.405 2.646.101 3.46 1.011 1.045 1.38.915 3.64.814 4.348-.102 1.315-1.221 3.034-1.323 3.135-.305-.809-.814-1.517-1.425-2.225zm-2.442 2.832c-1.526.202-3.052 1.01-4.171 2.123-1.12-.404-1.934-1.314-2.137-2.427-.316-2.427 1.526-3.64 2.849-3.842 1.628-.371 2.849.505 4.07 1.415 1.146 1.012 2.035 2.63 2.035 2.73-.916-.202-1.832-.1-2.646 0zm4.986.303c.509-.607.931-1.586 1.12-2.225.318-1.039.61-3.134.203-4.651 1.323-1.011 3.154-1.011 4.477.303 1.235 1.146 1.017 2.933.814 3.438-.663 1.581-1.933 2.326-3.256 2.832-1.221.404-3.256.303-3.358.303zm-2.645 1.011c-.51.607-.916 1.416-1.221 2.326-.407 1.314-.643 3.06-.102 4.55-1.323 1.011-3.256 1.011-4.477-.202-1.198-1.124-1.018-2.932-.814-3.438.599-1.605 1.933-2.326 3.256-2.831.916-.304 3.256-.405 3.358-.405zm9.259-1.82c1.017.404 1.933 1.315 2.035 2.427.233 2.57-1.526 3.64-2.849 3.842-1.526 0-2.85-.505-4.07-1.415-1.018-.81-2.035-2.528-2.035-2.63.916.203 1.831.102 2.645 0 1.628-.404 3.053-1.112 4.274-2.224zm-6.716 4.854c1.065 1.08 2.442 2.022 4.07 2.528.306 1.719-.814 3.235-2.442 3.741-1.22.405-2.645-.101-3.46-1.011-1.1-1.481-1.017-3.54-.915-4.247.102-1.315 1.221-3.034 1.323-3.135.305.708.721 1.44 1.424 2.124z">
                                 </path>
                             </svg>
                             所有标签
@@ -32,7 +32,7 @@
                                             <span class="Tag-content">
                                                 <a class="TopicLink" href="/tag/@tag.Key">
                                                     <div class="Popover">
-                                                        <div id="Popover7-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover7-content">@(tag.Key)(@tag.Value)</div>
+                                                        <div id="Popover7-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover7-content"># @(tag.Key)</div>
                                                     </div>
                                                 </a>
                                             </span>
