--- a/src/iBlogs.Site.Web/Views/Index/AllCategories.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/AllCategories.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model iBlogs.Site.Core.Meta.DTO.MetaDataViewModel
 <main role="main" class="App-main">
     <div class="Topstory">
         <div class="Topstory-container">
@@ -17,41 +17,47 @@
                             所有分类
                         </span>
                         <span class="TagsHeader">
-                            Total:
+                            Total:(@Model.Total)
                         </span>
                     </nav>
                 </div>
                 <div id="TopstoryContent" class="Topstory-content">
                     <div class="ListShortcut">
                         <div class="Topstory-hot HotList">
-                        <section class="HotItem">
-                                <div class="HotItem-index">
-                                    <div class="HotItem-rank HotItem-hot">3</div>
-                                </div>
-                                <div class="HotItem-content">
-                                    <a href="https://www.zhihu.com/question/328438112" title="《名侦探柯南》动画确定黑衣组织 BOSS，你有什么看法？">
-                                        <h2 class="HotItem-title">《名侦探柯南》动画确定黑衣组织 BOSS，你有什么看法？</h2>
-                                    </a>
-                                    <div class="HotItem-metrics">
-                                        <svg class="Zi Zi--Hot" fill="currentColor" viewBox="0 0 24 24" width="18" height="18">
-                                            <path fill="url(#id-2014200654-a)" d="M14.553 20.78c.862-.651 1.39-1.792 1.583-3.421.298-2.511-.656-4.904-2.863-7.179.209 2.291.209 3.73 0 4.314-.41 1.143-1.123 1.983-1.91 2.03-1.35.079-2.305-.512-2.863-1.774-.676 1.25-.782 2.556-.318 3.915.31.906.94 1.684 1.89 2.333C7.144 20.131 5 17.336 5 14.022c0-2.144.898-4.072 2.325-5.4.062 2.072.682 3.598 2.13 4.822-.67-1.112-.734-2.11-.734-3.517 0-3.253 2.067-6.007 4.913-6.927a7.35 7.35 0 0 0 2.157 4.918C17.722 9.214 19 11.463 19 14.022c0 3.073-1.844 5.7-4.447 6.758z" fill-rule="evenodd"></path>
-                                        </svg>955 万热度
-                                        <span class="HotItem-action">
-                                            <div class="Popover ShareMenu">
-                                                <div class="ShareMenu-toggler" id="Popover5-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover5-content">
-                                                    <button type="button" class="Button Button--plain Button--withIcon Button--withLabel">
-                                                        <span style="display: inline-flex; align-items: center;">
-                                                            <svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em">
-                                                                <path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path>
-                                                            </svg>
-                                                        </span>详情
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        </span>
+                            @{int index=1;
+                                @foreach (var category in Model.Data)
+                            {
+                                <section class="HotItem">
+                                    <div class="HotItem-index">
+                                        <div class="HotItem-rank @(index<4?"HotItem-hot":"")">@index</div>
                                     </div>
-                                </div>
-                            </section>
+                                    <div class="HotItem-content">
+                                        <a href="/category/@category.Key" title="@category.Key">
+                                            <h2 class="HotItem-title">@category.Key</h2>
+                                        </a>
+                                        <div class="HotItem-metrics">
+                                            <svg class="Zi Zi--Hot" fill="currentColor" viewBox="0 0 24 24" width="18" height="18">
+                                                <path fill="url(#id-2014200654-a)" d="M14.553 20.78c.862-.651 1.39-1.792 1.583-3.421.298-2.511-.656-4.904-2.863-7.179.209 2.291.209 3.73 0 4.314-.41 1.143-1.123 1.983-1.91 2.03-1.35.079-2.305-.512-2.863-1.774-.676 1.25-.782 2.556-.318 3.915.31.906.94 1.684 1.89 2.333C7.144 20.131 5 17.336 5 14.022c0-2.144.898-4.072 2.325-5.4.062 2.072.682 3.598 2.13 4.822-.67-1.112-.734-2.11-.734-3.517 0-3.253 2.067-6.007 4.913-6.927a7.35 7.35 0 0 0 2.157 4.918C17.722 9.214 19 11.463 19 14.022c0 3.073-1.844 5.7-4.447 6.758z" fill-rule="evenodd"></path>
+                                            </svg>热度: @category.Value
+                                            <span class="HotItem-action">
+                                                <div class="Popover ShareMenu">
+                                                    <div class="ShareMenu-toggler" id="Popover5-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover5-content">
+                                                        <button type="button" class="Button Button--plain Button--withIcon Button--withLabel">
+                                                            <span style="display: inline-flex; align-items: center;">
+                                                                <svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em">
+                                                                    <path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path>
+                                                                </svg>
+                                                            </span>详情
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </section>
+                                index++;
+                            }
+                            }
                         </div>
                     </div>
                 </div>
