--- a/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
@@ -1,4 +1,4 @@
-﻿@model iBlogs.Site.Core.Meta.DTO.TagViewModel
+﻿@model iBlogs.Site.Core.Meta.DTO.MetaDataViewModel
 <main role="main" class="App-main">
     <div class="Topstory">
         <div class="Topstory-container">
@@ -26,7 +26,7 @@
                         <div class="Topstory-recommend">
                             <div class="">
                                 <div class="QuestionHeader-topics Card TopstoryItem TopstoryItem-isRecommend">
-                                    @foreach (var tag in Model.Tags)
+                                    @foreach (var tag in Model.Data)
                                     {
                                         <div class="Tag QuestionTopic">
                                             <span class="Tag-content">
