add side bar tags and category

--- a/src/iBlogs.Site.Web/Views/Index/AllCategories.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/AllCategories.cshtml
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <partial name="SideBar" />
+            @await Component.InvokeAsync("SideBar")
         </div>
     </div>
 </main>
