--- a/src/iBlogs.Site.Web/Views/Index/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Index.cshtml
@@ -159,7 +159,7 @@
                     }
                 </div>
             </div>
-            <partial name="SideBar"/>
+            @await Component.InvokeAsync("SideBar")
         </div>
     </div>
 </main>
