--- a/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/AllTags.cshtml
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            <partial name="SideBar" />
+            @await Component.InvokeAsync("SideBar")
         </div>
     </div>
 </main>
