--- a/src/iBlogs.Site.Web/Views/Index/Archive.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Archive.cshtml
@@ -144,7 +144,7 @@
                     }
                 </div>
             </div>
-            <partial name="SideBar" />
+            @await Component.InvokeAsync("SideBar")
         </div>
     </div>
 </main>
