--- a/src/iBlogs.Site.Web/Views/Index/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Index.cshtml
@@ -77,17 +77,17 @@
                                                                         <path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z"
                                                                               fill-rule="evenodd"></path>
                                                                     </svg>
-                                                                </span>1,143 条评论
+                                                                </span>评论(@article.CommentsNum)
                                                             </button>
                                                             <button type="button" class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel">
-                                                                <span style="display: inline-flex; align-items: center;">
+                                                                <span style="display: inline-flex; align-items: center;" >
                                                                     <svg class="Zi Zi--Heart Button-zi"
                                                                          fill="currentColor" viewBox="0 0 24 24"
                                                                          width="1.2em" height="1.2em">
                                                                         <path d="M2 8.437C2 5.505 4.294 3.094 7.207 3 9.243 3 11.092 4.19 12 6c.823-1.758 2.649-3 4.651-3C19.545 3 22 5.507 22 8.432 22 16.24 13.842 21 12 21 10.158 21 2 16.24 2 8.437z"
                                                                               fill-rule="evenodd"></path>
                                                                     </svg>
-                                                                </span>感谢
+                                                                </span>阅读(@article.Hits)
                                                             </button>
                                                             <div class="Popover ShareMenu ContentItem-action">
                                                                 <div class="ShareMenu-toggler" id="Popover11-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover11-content">
