--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -66,7 +66,7 @@
         <div class="panel panel-color panel-danger panel-pages panel-shadow">
             <div class="panel-heading bg-img">
                 <div class="bg-overlay"></div>
-                <h3 class="text-center m-t-10"> Login Tale</h3>
+                <h3 class="text-center m-t-10"> Login iBlogs</h3>
             </div>
 
             <div class="panel-body">
