add category page function

--- a/src/iBlogs.Site.Web/Views/Index/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Index/Index.cshtml
@@ -121,17 +121,17 @@
                         <ol class="page-navigator">
                             @if (pageInfo.HasPrevPage)
                             {
-                                <li class="prev"><a href="/index/@Model.OrderType/@pageInfo.PrevPage">←</a></li>
+                                <li class="prev"><a href="/index/@Model.OrderType/@(!string.IsNullOrWhiteSpace(Model.DisplayMeta)?Model.DisplayMeta+'/':"")@pageInfo.PrevPage">←</a></li>
                             }
 
                             @foreach (var navIndex in pageInfo.NavPageNums)
                             {
-                                <li class="@(pageInfo.PageNum==navIndex?"current":"")"><a href="/index/@Model.OrderType/@navIndex">@navIndex</a></li>
+                                <li class="@(pageInfo.PageNum==navIndex?"current":"")"><a href="/index/@Model.OrderType/@(!string.IsNullOrWhiteSpace(Model.DisplayMeta)?Model.DisplayMeta+'/':"")@navIndex">@navIndex</a></li>
                             }
 
                             @if (pageInfo.HasNextPage)
                             {
-                                <li class="next"><a href="/index/@Model.OrderType/@pageInfo.NextPage">→</a></li>
+                                <li class="next"><a href="/index/@Model.OrderType/@(!string.IsNullOrWhiteSpace(Model.DisplayMeta)?Model.DisplayMeta+'/':"")@pageInfo.NextPage">→</a></li>
                             }
                         </ol>
                     }
