--- a/src/iBlogs.Site.Web/Views/Shared/Components/SideBar/Default.cshtml
+++ b/src/iBlogs.Site.Web/Views/Shared/Components/SideBar/Default.cshtml
@@ -77,6 +77,61 @@
                         <a href="https://www.Blogs.com/collections" target="_blank" data-za-not-track-link="true" type="button" class="Button GlobalSideBar-navLink Button--plain">
                             <svg class="Zi Zi--Star GlobalSideBar-navIcon" fill="currentColor"
                                  viewBox="0 0 24 24" width="18" height="18">
+                                <path d="M5 14a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm7 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm7 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"
+                                      fill-rule="evenodd"></path>
+                            </svg><span class="GlobalSideBar-navText">博客信息</span>
+                        </a>
+                    </li>
+                    <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
+                        <a type="button" class="Button GlobalSideBar-navLink Button--plain">
+                            <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon"
+                                 fill="currentColor" viewBox="1 -17 511.99926 511" width="18" height="18"><path d="m504.035156 4.523438c-5.019531-3.777344-11.519531-4.980469-17.554687-3.246094-23.167969 6.652344-52.695313 4.773437-90.078125 2.398437-23.40625-1.488281-49.933594-3.175781-80.402344-3.175781-23.875 0-45.328125 10.527344-60 27.167969-14.671875-16.640625-36.121094-27.167969-60-27.167969-30.464844 0-56.996094 1.6875-80.402344 3.175781-37.382812 2.378907-66.910156 4.257813-90.078125-2.398437-6.035156-1.734375-12.535156-.53125-17.550781 3.246094-5.019531 3.78125-7.96875 9.695312-7.96875 15.976562v331.796875c-.0546875 21.40625 8.242188 41.542969 23.359375 56.699219s35.234375 23.503906 56.640625 23.503906h145c11.046875 0 20-8.953125 20-20s-8.953125-20-20-20h-145c-10.703125 0-20.761719-4.171875-28.320312-11.75-7.558594-7.578125-11.707032-17.648438-11.679688-28.402344v-10.609375c11.777344 6.828125 25.433594 10.761719 40 10.761719h149c4.445312 0 7.488281 2.761719 8.855469 5.34375 3.589843 6.777344 10.519531 10.644531 17.691406 10.644531 3.15625 0 6.359375-.746093 9.339844-2.328125 6.023437-3.1875 9.738281-9.015625 10.492187-15.300781.390625-1.558594.621094-3.179687.621094-4.859375v-265.5c0-22.054688 17.941406-40 40-40 29.195312 0 55.050781 1.644531 77.863281 3.09375 29.832031 1.898438 55.132813 3.507812 78.136719 1.011719v143.894531c0 11.046875 8.953125 20 20 20s20-8.953125 20-20v-168c0-6.28125-2.949219-12.195312-7.964844-15.976562zm-424.035156 307.976562c-22.054688 0-40-17.945312-40-40v-227.894531c23.003906 2.496093 48.300781.886719 78.132812-1.011719 22.816407-1.449219 48.671876-3.09375 77.867188-3.09375 22.054688 0 40 17.945312 40 40v232.492188c-2.296875-.324219-4.632812-.492188-7-.492188zm122-199c0 11.046875-8.953125 20-20 20h-87c-11.046875 0-20-8.953125-20-20s8.953125-20 20-20h87c11.046875 0 20 8.953125 20 20zm-30 80c0 11.046875-8.953125 20-20 20h-57c-11.046875 0-20-8.953125-20-20s8.953125-20 20-20h57c11.046875 0 20 8.953125 20 20zm237.589844 61.558594-109.800782 109.558594c-2.332031 2.328124-4.054687 5.195312-5.011718 8.347656l-23.914063 78.722656c-2.117187 6.980469-.269531 14.5625 4.820313 19.78125 3.816406 3.910156 9 6.035156 14.320312 6.035156 1.777344 0 3.574219-.238281 5.335938-.730468l80.726562-22.359376c3.320313-.921874 6.347656-2.683593 8.789063-5.121093l109.574219-109.363281c23.390624-23.394532 23.390624-61.460938 0-84.855469-23.394532-23.394531-61.460938-23.394531-84.839844-.015625zm-49.273438 162.207031-40.609375 11.25 11.882813-39.125 74.089844-73.925781 28.289062 28.289062zm105.839844-105.636719-3.875 3.867188-28.285156-28.285156 3.863281-3.851563c7.796875-7.800781 20.484375-7.800781 28.28125 0 7.800781 7.796875 7.800781 20.484375.015625 28.269531zm0 0" /></svg>
+                            <span class="GlobalSideBar-navText">文章数目</span><span class="GlobalSideBar-navNumber">5</span>
+                        </a>
+                    </li>
+                    <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
+                        <a type="button" class="Button GlobalSideBar-navLink Button--plain">
+                            <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon" x="0px" y="0px"
+                                 viewBox="0 0 60 60" width="18" height="18">
+                                <g>
+                                    <path d="M54.07,1H15.93C12.66,1,10,3.66,10,6.93V13h34.07c4.372,0,7.93,3.557,7.93,7.929V34h2.07c3.27,0,5.93-2.66,5.93-5.93V6.93C60,3.66,57.34,1,54.07,1z" />
+                                    <path d="M44.07,15H5.93C2.66,15,0,17.66,0,20.929V42.07C0,45.34,2.66,48,5.93,48H12v10c0,0.413,0.254,0.784,0.64,0.933C12.757,58.978,12.879,59,13,59c0.276,0,0.547-0.115,0.74-0.327L23.442,48H44.07c3.27,0,5.93-2.66,5.93-5.93V20.929C50,17.66,47.34,15,44.07,15z M12,25.015h14c0.553,0,1,0.448,1,1s-0.447,1-1,1H12c-0.553,0-1-0.448-1-1S11.447,25.015,12,25.015zM39,39.015H12c-0.553,0-1-0.448-1-1s0.447-1,1-1h27c0.553,0,1,0.448,1,1S39.553,39.015,39,39.015z M39,33.015H12c-0.553,0-1-0.448-1-1s0.447-1,1-1h27c0.553,0,1,0.448,1,1S39.553,33.015,39,33.015z" />
+                                </g>
+                            </svg>
+                            <span class="GlobalSideBar-navText">评论数目</span><span class="GlobalSideBar-navNumber">101</span>
+                        </a>
+                    </li>
+                    <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
+                        <a type="button" class="Button GlobalSideBar-navLink Button--plain">
+                            <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon"
+                                 fill="currentColor" viewBox="0 0 485.213 485.212" width="18" height="18">
+                                <g>
+                                    <path d="M60.652,75.816V15.163C60.652,6.781,67.433,0,75.817,0c8.38,0,15.161,6.781,15.161,15.163v60.653c0,8.38-6.781,15.161-15.161,15.161C67.433,90.978,60.652,84.196,60.652,75.816z M318.424,90.978c8.378,0,15.163-6.781,15.163-15.161V15.163C333.587,6.781,326.802,0,318.424,0c-8.382,0-15.168,6.781-15.168,15.163v60.653C303.256,84.196,310.042,90.978,318.424,90.978z M485.212,363.906c0,66.996-54.312,121.307-121.303,121.307c-66.986,0-121.302-54.311-121.302-121.307c0-66.986,54.315-121.3,121.302-121.3C430.9,242.606,485.212,296.919,485.212,363.906zM454.89,363.906c0-50.161-40.81-90.976-90.98-90.976c-50.166,0-90.976,40.814-90.976,90.976c0,50.171,40.81,90.98,90.976,90.98C414.08,454.886,454.89,414.077,454.89,363.906z M121.305,181.955H60.652v60.651h60.653V181.955z M60.652,333.584h60.653V272.93H60.652V333.584z M151.629,242.606h60.654v-60.651h-60.654V242.606z M151.629,333.584h60.654V272.93h-60.654V333.584zM30.328,360.891V151.628h333.582v60.653h30.327V94c0-18.421-14.692-33.349-32.843-33.349h-12.647v15.166c0,16.701-13.596,30.325-30.322,30.325c-16.731,0-30.326-13.624-30.326-30.325V60.651H106.14v15.166c0,16.701-13.593,30.325-30.322,30.325c-16.733,0-30.327-13.624-30.327-30.325V60.651H32.859C14.707,60.651,0.001,75.579,0.001,94v266.892c0,18.36,14.706,33.346,32.858,33.346h179.424v-30.331H32.859C31.485,363.906,30.328,362.487,30.328,360.891zM303.256,242.606v-60.651h-60.648v60.651H303.256z M409.399,363.906h-45.49v-45.49c0-8.377-6.781-15.158-15.163-15.158s-15.159,6.781-15.159,15.158v60.658c0,8.378,6.777,15.163,15.159,15.163h60.653c8.382,0,15.163-6.785,15.163-15.163C424.562,370.692,417.781,363.906,409.399,363.906z" />
+                                </g>
+                            </svg><span class="GlobalSideBar-navText">运行时间</span><span class="GlobalSideBar-navNumber">100天</span>
+                        </a>
+                    </li>
+                    <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
+                        <a type="button" class="Button GlobalSideBar-navLink Button--plain">
+                            <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon"
+                                 fill="currentColor" viewBox="0 0 60 60" width="18" height="18">
+                                <g>
+                                    <path d="M54,58h-3v-4h-5V43.778c0-2.7-1.342-5.208-3.589-6.706L31.803,30l10.608-7.072C44.658,21.43,46,18.922,46,16.222V6h5V2h3c0.552,0,1-0.447,1-1s-0.448-1-1-1h-3h-1H10H9H6C5.448,0,5,0.447,5,1s0.448,1,1,1h3v4h5v10.222c0,2.7,1.342,5.208,3.589,6.706L28.197,30l-10.608,7.072C15.342,38.57,14,41.078,14,43.778V54H9v4H6c-0.552,0-1,0.447-1,1s0.448,1,1,1h3h1h40h1h3c0.552,0,1-0.447,1-1S54.552,58,54,58z M18.698,21.264C17.009,20.137,16,18.252,16,16.222V6h28v10.222c0,2.03-1.009,3.915-2.698,5.042L30,28.798L18.698,21.264z M16,43.778c0-2.03,1.009-3.915,2.698-5.042L30,31.202l11.302,7.534C42.991,39.863,44,41.748,44,43.778V54H16V43.778z" />
+                                    <path d="M20.917,17.936C20.343,17.553,20,16.912,20,16.222V14c0-0.553-0.448-1-1-1s-1,0.447-1,1v2.222c0,1.361,0.676,2.624,1.808,3.378l4.638,3.092c0.17,0.113,0.363,0.168,0.554,0.168c0.323,0,0.64-0.156,0.833-0.445c0.306-0.46,0.182-1.08-0.277-1.387L20.917,17.936z" />
+                                    <path d="M40.192,41.26l-4.638-3.092c-0.46-0.307-1.08-0.183-1.387,0.277c-0.306,0.46-0.182,1.08,0.277,1.387l4.638,3.092C39.657,43.307,40,43.947,40,44.638v2.222c0,0.553,0.448,1,1,1s1-0.447,1-1v-2.222C42,43.276,41.324,42.014,40.192,41.26z" />
+                                </g>
+                            </svg><span class="GlobalSideBar-navText">最后活动</span><span class="GlobalSideBar-navNumber">一秒前</span>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+            <div class="Card">
+                <ul class="GlobalSideBar-navList">
+                    <li class="GlobalSideBar-navItem GlobalSideBar-starItem">
+                        <a href="https://www.Blogs.com/collections" target="_blank" data-za-not-track-link="true" type="button" class="Button GlobalSideBar-navLink Button--plain">
+                            <svg class="Zi Zi--Star GlobalSideBar-navIcon" fill="currentColor"
+                                 viewBox="0 0 24 24" width="18" height="18">
                                 <path d="M14.553 20.78c.862-.651 1.39-1.792 1.583-3.421.298-2.511-.656-4.904-2.863-7.179.209 2.291.209 3.73 0 4.314-.41 1.143-1.123 1.983-1.91 2.03-1.35.079-2.305-.512-2.863-1.774-.676 1.25-.782 2.556-.318 3.915.31.906.94 1.684 1.89 2.333C7.144 20.131 5 17.336 5 14.022c0-2.144.898-4.072 2.325-5.4.062 2.072.682 3.598 2.13 4.822-.67-1.112-.734-2.11-.734-3.517 0-3.253 2.067-6.007 4.913-6.927a7.35 7.35 0 0 0 2.157 4.918C17.722 9.214 19 11.463 19 14.022c0 3.073-1.844 5.7-4.447 6.758z"
                                       fill-rule="evenodd"></path>
                             </svg><span class="GlobalSideBar-navText">热门分类</span>
@@ -87,9 +142,10 @@
                         <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
                             <a type="button" class="Button GlobalSideBar-navLink Button--plain" href="/category/@category.Key">
                                 <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon"
-                                     fill="currentColor" viewBox="0 0 24 24" width="18" height="18">
-                                    <path d="M5.74 4h12.52c.961 0 1.74.775 1.74 1.73V16.27c0 .955-.779 1.73-1.74 1.73h-3.825l-1.658 2.044a1 1 0 0 1-1.554 0l-1.658-2.044H5.74C4.78 18 4 17.224 4 16.27V5.73C4 4.775 4.778 4 5.74 4zM7 8.98c0 .554.449.996 1.003.996h4.994A.992.992 0 0 0 14 8.981a.997.997 0 0 0-1.003-.995H8.003A.992.992 0 0 0 7 8.98zm0 4c0 .554.446.996.995.996h8.01a.993.993 0 0 0 .995-.995.993.993 0 0 0-.995-.995h-8.01A.993.993 0 0 0 7 12.98z"
-                                          fill-rule="evenodd"></path>
+                                     fill="currentColor" viewBox="0 0 512 512" width="18" height="18">
+                                    <g>
+                                        <path d="M467,331h-15v-15c0-24.813-20.187-45-45-45H271v-30c14.095,0,30.95,0,45,0c8.284,0,15-6.716,15-15s-6.716-15-15-15h-15v-30h45c24.813,0,45-20.187,45-45V45c0-24.813-20.187-45-45-45H166c-24.813,0-45,20.187-45,45v91c0,24.813,20.187,45,45,45h45v30h-15c-8.284,0-15,6.716-15,15s6.716,15,15,15c14.05,0,30.905,0,45,0v30H105c-24.813,0-45,20.187-45,45v15H45c-24.813,0-45,20.187-45,45v30c0,24.813,20.187,45,45,45h15v31H45c-8.284,0-15,6.716-15,15s6.716,15,15,15h60c8.284,0,15-6.716,15-15s-6.716-15-15-15H90v-31h15c24.813,0,45-20.187,45-45v-30c0-24.813-20.187-45-45-45H90v-15c0-8.271,6.729-15,15-15h136v30h-15c-24.813,0-45,20.187-45,45v30c0,24.813,20.187,45,45,45h15v31h-15c-8.284,0-15,6.716-15,15s6.716,15,15,15h60c8.284,0,15-6.716,15-15s-6.716-15-15-15h-15v-31h15c24.813,0,45-20.187,45-45v-30c0-24.813-20.187-45-45-45h-15v-30h136c8.271,0,15,6.729,15,15v15h-15c-24.813,0-45,20.187-45,45v30c0,24.813,20.187,45,45,45h15v31h-15c-8.284,0-15,6.716-15,15s6.716,15,15,15h60c8.284,0,15-6.716,15-15s-6.716-15-15-15h-15v-31h15c24.813,0,45-20.187,45-45v-30C512,351.187,491.813,331,467,331z M105,361c8.271,0,15,6.729,15,15v30c0,8.271-6.729,15-15,15H45c-8.271,0-15-6.729-15-15v-30c0-8.271,6.729-15,15-15H105z M166,151c-8.271,0-15-6.729-15-15V45c0-8.271,6.729-15,15-15h180c8.271,0,15,6.729,15,15v91c0,8.271-6.729,15-15,15C309.96,151,201.911,151,166,151z M286,361c8.271,0,15,6.729,15,15v30c0,8.271-6.729,15-15,15h-60c-8.271,0-15-6.729-15-15v-30c0-8.271,6.729-15,15-15H286z M241,211v-30h30v30H241z M482,406c0,8.271-6.729,15-15,15h-60c-8.271,0-15-6.729-15-15v-30c0-8.271,6.729-15,15-15h60c8.271,0,15,6.729,15,15V406z"/>
+                                    </g>
                                 </svg><span class="GlobalSideBar-navText">@category.Key</span><span class="GlobalSideBar-navNumber">@category.Value</span>
                             </a>
                         </li>
@@ -111,16 +167,14 @@
                     {
                         <li class="GlobalSideBar-navItem GlobalSideBar-questionListItem">
                             <a type="button" class="Button GlobalSideBar-navLink Button--plain" href="/tag/@tag.Key">
-                                <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon"
-                                     fill="currentColor" viewBox="0 0 24 24" width="18" height="18">
-                                    <path d="M5.515 19.64l.918-5.355-3.89-3.792c-.926-.902-.639-1.784.64-1.97L8.56 7.74l2.404-4.871c.572-1.16 1.5-1.16 2.072 0L15.44 7.74l5.377.782c1.28.186 1.566 1.068.64 1.97l-3.89 3.793.918 5.354c.219 1.274-.532 1.82-1.676 1.218L12 18.33l-4.808 2.528c-1.145.602-1.896.056-1.677-1.218z"
-                                          fill-rule="evenodd"></path>
+                                <svg class="Zi Zi--HelpBubble GlobalSideBar-navIcon" fill="currentColor" viewBox="0 0 425.7 425.7" width="18" height="18">
+                                    <g><g><path d="M167.538,231.652c-2.56-0.512-5.632,1.024-6.144,4.096l-24.064,117.76c-0.512,2.56,1.024,5.632,4.096,6.144c0.512,0,0.512,0,1.024,0c2.56,0,4.608-1.536,5.12-4.096l24.064-117.76C172.146,235.236,170.61,232.164,167.538,231.652z" /></g></g><g><g><path d="M202.354,238.82c-2.56-0.512-5.632,1.024-6.144,4.096l-24.064,117.76c-0.512,2.56,1.024,5.632,4.096,6.144c0.512,0,0.512,0,1.024,0c2.56,0,4.608-1.536,5.12-4.096l24.064-117.76C206.962,241.892,204.914,239.332,202.354,238.82z" /></g></g><g><g><path d="M236.658,245.988c-2.56-0.512-5.632,1.024-6.144,4.096l-24.064,117.76c-0.512,2.56,1.024,5.632,4.096,6.144c0.512,0,0.512,0,1.024,0c2.56,0,4.608-1.536,5.12-4.096l24.064-117.76C241.266,249.06,239.218,246.5,236.658,245.988z" /></g></g><g><g><path d="M412.274,0.74c-2.56-1.536-5.632-0.512-7.168,1.536C367.218,65.764,313.97,108.26,275.57,132.324c-1.536,0-3.584,0-5.12,0l-55.296,4.096l-33.28-6.144c-10.24-2.048-20.48-1.024-30.208,3.072C110.706,107.236,57.97,65.252,20.594,2.788c-1.536-2.56-4.608-3.072-7.168-1.536S10.354,5.86,11.89,8.42c36.864,61.952,88.064,104.448,129.536,131.072c-10.752,7.68-17.92,18.944-20.48,31.744l-35.84,176.64c-5.632,27.648,12.288,55.296,39.936,60.928l77.824,15.872c3.584,0.512,6.656,1.024,10.24,1.024c17.92,0,34.816-9.728,44.032-25.088l32.768-2.56c12.8-1.024,24.576-7.168,33.28-16.896c8.704-9.728,12.8-22.528,11.776-35.328l-12.8-167.936c-1.536-19.456-14.848-35.84-32.256-41.984c38.4-26.112,88.064-67.584,123.904-128C415.346,5.348,414.834,2.276,412.274,0.74z M255.09,382.692c-5.632,20.992-27.136,35.328-49.664,31.232l-77.824-15.872c-22.528-4.608-36.864-26.624-32.256-48.64l35.84-176.64c2.048-10.752,8.704-19.968,17.92-26.112c1.024-0.512,1.536-1.024,2.56-1.536c19.456,11.776,35.84,19.968,46.592,25.088c-4.608,3.072-7.68,7.68-8.704,13.824c-1.024,5.632,0,11.776,3.072,16.896c3.072,5.12,8.192,8.192,13.824,9.728c1.536,0.512,3.072,0.512,4.608,0.512c4.096,0,8.704-1.024,12.288-3.584c5.12-3.072,8.192-8.192,9.728-13.824c1.024-5.632,0-11.776-3.072-16.896c-3.072-4.608-7.68-7.68-13.312-9.216c-0.512,0-22.016-8.192-52.224-26.112c2.56-0.512,5.632-1.024,8.192-1.024s5.632,0.512,8.192,1.024l77.824,15.872c22.528,4.608,36.864,26.624,32.256,48.64L255.09,382.692z M199.282,185.572c1.024-5.632,6.144-9.728,11.776-9.728c1.024,0,1.536,0,2.56,0c3.072,0.512,5.632,2.56,7.68,5.12c1.536,2.56,2.56,5.632,1.536,8.704c-0.512,3.072-2.56,5.632-5.12,7.68c-2.56,1.536-5.632,2.56-8.704,1.536c-3.072-0.512-5.632-2.56-7.68-5.12C199.282,191.716,198.77,188.644,199.282,185.572zM311.922,177.892l12.8,167.936c1.536,20.992-14.336,39.424-35.328,40.96l-27.136,2.048c0.512-2.048,1.024-3.584,1.536-5.632l12.8-62.976l1.536,25.6c0,2.56,2.56,4.608,5.12,4.608c0,0,0,0,0.512,0c3.072,0,5.12-2.56,4.608-5.632l-4.096-62.976l15.36-75.264c5.632-27.648-12.288-55.296-39.936-60.928l-8.704-1.536l19.456-1.536C291.954,141.028,310.386,156.9,311.922,177.892z" /></g></g>
                                 </svg><span class="GlobalSideBar-navText">@tag.Key</span><span class="GlobalSideBar-navNumber">@tag.Value</span>
                             </a>
                         </li>
                     }
                 </ul>
-                
+
             </div>
         </div>
     </div>
